WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174224
WKWebSiteDataStore.removeDataOfTypes should wait until disk cache files are actually removed before invoking completion handler
https://bugs.webkit.org/show_bug.cgi?id=174224
Summary
WKWebSiteDataStore.removeDataOfTypes should wait until disk cache files are a...
Antti Koivisto
Reported
2017-07-06 15:56:28 PDT
Currently we dispatch the file deletion operations to a background queue and call completion handler without waiting for the I/O to complete.
Attachments
patch
(5.36 KB, patch)
2017-07-06 16:06 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(6.03 KB, patch)
2017-07-06 16:19 PDT
,
Antti Koivisto
sam
: review+
Details
Formatted Diff
Diff
patch
(5.95 KB, patch)
2017-07-06 16:35 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-07-06 15:57:11 PDT
<
rdar://problem/33067545
>
Antti Koivisto
Comment 2
2017-07-06 16:06:32 PDT
Created
attachment 314768
[details]
patch
Build Bot
Comment 3
2017-07-06 16:09:18 PDT
Attachment 314768
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.cpp:563: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h:71: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCache.cpp:508: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCache.h:124: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 4 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 4
2017-07-06 16:19:24 PDT
Created
attachment 314773
[details]
patch
Build Bot
Comment 5
2017-07-06 16:21:54 PDT
Attachment 314773
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.cpp:562: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h:71: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCache.cpp:508: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCache.h:124: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 4 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 6
2017-07-06 16:24:40 PDT
Comment on
attachment 314773
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314773&action=review
r=me
> Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.cpp:567 > + keysToRemove.reserveCapacity(keys.size());
You can call reserveInitialCapacity() here.
> Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.cpp:581 > + RunLoop::main().dispatch([completionHandler = WTFMove(completionHandler)] {
I think you can just pass completionHandler to RunLoop::main().dispatch() (not completely sure the types are the same).
Antti Koivisto
Comment 7
2017-07-06 16:35:11 PDT
Created
attachment 314777
[details]
patch
Build Bot
Comment 8
2017-07-06 16:37:50 PDT
Attachment 314777
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.cpp:562: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h:71: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCache.cpp:508: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCache.h:124: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 4 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 9
2017-07-07 00:22:15 PDT
Comment on
attachment 314777
[details]
patch Clearing flags on attachment: 314777 Committed
r219249
: <
http://trac.webkit.org/changeset/219249
>
WebKit Commit Bot
Comment 10
2017-07-07 00:22:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug